--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+# Credentials
 secret/
+analyticsreporting.dat
+
+# System / Language folders
 __pycache__/
 .vscode/
-analyticsreporting.dat
 .DS_Store
+
+# Others
+test.py
